// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`variable declerations should declare-function.cy 1`] = `
"import $NEO from \\"./neo.runtime.js\\"

var func = $NEO.stone(function () {
    return \\"hello world\\";
});"
`;

exports[`variable declerations should declare-function.cy 2`] = `
Object {
  "id": "",
  "scope": Object {
    "func": Object {
      "alphameric": true,
      "column_nr": 4,
      "column_to": 8,
      "id": "func",
      "line_nr": 0,
      "origin": [Circular],
      "readonly": true,
    },
  },
  "zeroth": Array [
    Object {
      "alphameric": true,
      "class": "statement",
      "column_nr": 0,
      "column_to": 3,
      "id": "def",
      "line_nr": 0,
      "wunth": Object {
        "column_nr": 10,
        "column_to": 11,
        "id": "ƒ",
        "line_nr": 0,
        "parent": [Circular],
        "scope": Object {},
        "wunth": Array [
          Object {
            "alphameric": true,
            "class": "statement",
            "column_nr": 4,
            "column_to": 10,
            "disrupt": true,
            "id": "return",
            "line_nr": 1,
            "return": true,
            "zeroth": Object {
              "column_nr": 11,
              "column_to": 24,
              "id": "(text)",
              "line_nr": 1,
              "readonly": true,
              "text": "hello world",
            },
          },
        ],
        "zeroth": Array [],
      },
      "zeroth": Object {
        "alphameric": true,
        "column_nr": 4,
        "column_to": 8,
        "id": "func",
        "line_nr": 0,
        "origin": [Circular],
        "readonly": true,
      },
    },
  ],
}
`;

exports[`variable declerations should declare-number.cy 1`] = `
"import $NEO from \\"./neo.runtime.js\\"
const $10000 = $NEO.number(\\"10000\\");

var variable = $10000;"
`;

exports[`variable declerations should declare-number.cy 2`] = `
Object {
  "id": "",
  "scope": Object {
    "variable": Object {
      "alphameric": true,
      "column_nr": 4,
      "column_to": 12,
      "id": "variable",
      "line_nr": 0,
      "origin": [Circular],
      "readonly": false,
    },
  },
  "zeroth": Array [
    Object {
      "alphameric": true,
      "class": "statement",
      "column_nr": 0,
      "column_to": 3,
      "id": "var",
      "line_nr": 0,
      "wunth": Object {
        "column_nr": 14,
        "column_to": 19,
        "id": "(number)",
        "line_nr": 0,
        "number": Object {
          "coefficient": Array [
            "+",
            10000,
          ],
          "exponent": 0,
        },
        "readonly": true,
        "text": "10000",
      },
      "zeroth": Object {
        "alphameric": true,
        "column_nr": 4,
        "column_to": 12,
        "id": "variable",
        "line_nr": 0,
        "origin": [Circular],
        "readonly": false,
      },
    },
  ],
}
`;

exports[`variable declerations should declare-text.cy 1`] = `
"import $NEO from \\"./neo.runtime.js\\"

var text = \\"Hello World\\";"
`;

exports[`variable declerations should declare-text.cy 2`] = `
Object {
  "id": "",
  "scope": Object {
    "text": Object {
      "alphameric": true,
      "column_nr": 4,
      "column_to": 8,
      "id": "text",
      "line_nr": 0,
      "origin": [Circular],
      "readonly": false,
    },
  },
  "zeroth": Array [
    Object {
      "alphameric": true,
      "class": "statement",
      "column_nr": 0,
      "column_to": 3,
      "id": "var",
      "line_nr": 0,
      "wunth": Object {
        "column_nr": 10,
        "column_to": 23,
        "id": "(text)",
        "line_nr": 0,
        "readonly": true,
        "text": "Hello World",
      },
      "zeroth": Object {
        "alphameric": true,
        "column_nr": 4,
        "column_to": 8,
        "id": "text",
        "line_nr": 0,
        "origin": [Circular],
        "readonly": false,
      },
    },
  ],
}
`;
